--- a/2operator.html
+++ b/2operator.html
@@ -52,6 +52,12 @@
         var matahari_terik = true
         console.log(!hari_ini_hujan)
 
+        console.log(true && true && false)
+        console.log(true || false || true)
+
+        // && kondisinya true jika semua true
+        // || kondisinya false jika semua false
+
     </script>
     
 </body>
